# plugin

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  env.example  go.mod  go.sum  main.go
.github/workflows/: delete-branch-on-merge.yml  publish-php-sdk.yml
cmd/: main.go
cmd/plugins/: plugins.yaml
configs/: plugins.yaml
docs/: plugin-architecture.md  unix-socket-performance.md  worlds_and_entities.md
examples/plugins/: README.md
examples/plugins/hcf-plugin/: .gitignore  README.md  package.json  tsconfig.json
examples/plugins/node/: bun.lockb  hello.js  package.json
examples/plugins/php/: CUSTOM_PHP.md  Dockerfile  GET_STARTED.md  HelloPlugin.php  Makefile  QUICKSTART.md  README.md  WINDOWS.md  composer.json  docker-compose.yml  setup.sh
examples/plugins/rust/: .gitignore  Cargo.toml  README.md
examples/plugins/rust/src/: main.rs
examples/plugins/typescript/: README.md  bun.lockb  package.json  tsconfig.json
plugin/: README.md  TODO.md  config.go  manager.go  player_handler.go  process.go  transport.go  world_handler.go
plugin/adapters/grpc/: transport.go
plugin/adapters/handlers/: player.go  (+1 more)
plugin/config/: config.go
plugin/ports/: ports.go
plugin/proto/: Makefile  buf.gen.php.yaml  buf.gen.yaml  buf.yaml  codec.go  messages.go  package.json  plugin.proto
plugins/: plugins.yaml
proto/: .gitignore  Makefile  buf.gen.ts.yaml  buf.gen.yaml  bun.lockb  package.json
proto/types/: actions.proto  command.proto  common.proto  mutations.proto  player_events.proto  plugin.proto  world_events.proto
scripts/: post_generation.sh
(+29 files in other folders)
